fixed spacing

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,56 +1,4 @@
-body {
-  margin: 1.5em;
-}
-
-.mat-toolbar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  height: 100px;
-  display: flex;
-  align-items: center;
-  background-color: azure ;
-  color: #181f33;
-  font-weight: 600;
-  z-index: 1;
-}
-.toolbar button {
-  height: 28px;
-}
-
-.buttonSearch {
-  background-color: #7ad3bd;
-  margin-left: auto;
-}
-
-.buttonLogIn {
-  background-color: #181f33;
-  color: azure ;
-  margin-left: auto;
-}
-
-.buttonSignUp {
-  background-color: #181f33;
-  color: azure ;
-  margin-left:16px;
-}
-
-
-
-.buttonUpload {
-  background-color: #181f33;
-  color: azure;
-  margin-left: 16px;
-}
-
-
-
-.toolbar img {
-  margin: 0 16px;
-}
-
-.search-area {
-  margin-top: 15em;
+.router-outlet{
+  margin-top: 5em;
 }
 
