--- a/src/app/search-area/search-area.component.css
+++ b/src/app/search-area/search-area.component.css
@@ -24,6 +24,9 @@ button {
   width: 200px;
 }
 
+.image-list {
+  margin-top: 3em;
+}
 
 
 
